# state-mesh-agent-runtime

./: .gitignore  pyproject.toml  requirements.txt
state-mesh/: __init__.py
state-mesh/core/: context.py  pipeline.py  step.py
state-mesh/guardrails/: base.py  content.py  runner.py  schema.py
state-mesh/integrations/: fastapi.py
state-mesh/mcp/: bus.py  client.py  registry.py
state-mesh/observability/: events.py  flags.py
state-mesh/output/: contract.py  parser.py  retry.py
state_mesh/: __init__.py
state_mesh/core/: parallel.py  pipeline.py  step.py
state_mesh/guardrails/: base.py  content.py  runner.py  schema.py
state_mesh/integrations/: fastapi.py
state_mesh/mcp/: bus.py  registry.py
state_mesh/observability/: events.py  flags.py  tracer.py
state_mesh/output/: parser.py  retry.py
state_mesh/state/: base.py  memory.py  redis_backend.py
tests/unit/: test_context.py  test_guardrails.py  test_mcp.py  test_output.py  test_parallel.py  test_pipeline.py  test_state.py  test_step.py
